Fixed the status priority to make sure that the right task status is shown when updating tasks. Fixed default dashboard view that was showing all of the archived tasks and other categories

--- a/dopeticks/static/main.css
+++ b/dopeticks/static/main.css
@@ -125,7 +125,9 @@ body{
     margin-top: 5rem;
 }
 
-
+.highlight {
+  background-color: orange;
+}
 
 
 .card-margin {
@@ -268,6 +270,8 @@ body{
     padding: 25px;
 }
 
+
+
 .order-card i {
     font-size: 26px;
 }
@@ -281,11 +285,23 @@ body{
 }
 
 .row.display-flex {
-  margin-top: 5%;
+  margin-top: 0%;
   display: flex;
   flex-wrap: wrap;
 }
 .row.display-flex > [class*='col-'] {
   display: flex;
   flex-direction: column;
+}
+
+.cardTag.card-bigger {
+    transform: scale(1.2);
+}
+
+.cardTag.card-bigger {
+    transform: scale(1.2);
+}
+
+.btn-outline-info.active {
+  background-color: #17a2b8;
 }
