--- a/dopeticks/templates/createTask.html
+++ b/dopeticks/templates/createTask.html
@@ -41,6 +41,7 @@
 					<div class="row justify-content-between text-left">
 						<div class="form-group col-sm-6 flex-column d-flex">
 							<!-- {{ form.taskStatus }} -->
+							{{ form.taskStatus.label(class="form-control-label") }}
 							{% for choices in form.taskStatus %}
 								<label class="radio">
 									{{ choices }}
@@ -50,6 +51,7 @@
 						</div>
 
 						<div class="form-group col-sm-6 flex-column d-flex">
+							{{ form.taskPriority.label(class="form-control-label") }}
 							{% for choices in form.taskPriority %}
 								<label class="radio">
 									{{ choices }}
@@ -78,7 +80,7 @@
 					<div class="row justify-content-end">
 						<div class="form-group mr-3">
 							<a href={{ url_for('main.dashboard') }} class="btn btn-info">Cancel</a>
-							<button type="submit" class="btn btn-outline-info">Create</button>
+							<button type="submit" class="btn btn-outline-info">{{ buttonName }}</button>
 						</div>
 					</div>
 				</form>
